Add ProgrssBar & readme.md

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,14 @@
         android:textColor="@color/primary"
         android:textSize="22dp" />
 
+    <ProgressBar
+        android:id="@+id/pb_loading"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:visibility="invisible"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
+
     <FrameLayout
         android:id="@+id/user_profile_container"
         android:layout_marginTop="16dp"
